src/objects/loan__Savings_Account__c.object
<CustomObject>
    <description>Savings accounts can be created for saving products already defined in MFIForce. They inherit the rules and defaults from the product definition.
Savings accounts can be created for an individual or a group depending on the definition of the product.</description>
    <fields>
        <fullName>loan__Approval_Date__c</fullName>
        <label>Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Balance__c</fullName>
        <defaultValue>0.0</defaultValue>
        <label>Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Branch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Branch</label>
        <referenceTo>loan__Office_Name__c</referenceTo>
        <relationshipLabel>Savings Accounts</relationshipLabel>
        <relationshipName>Savings_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Center__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Center</label>
        <referenceTo>loan__Center__c</referenceTo>
        <relationshipLabel>Savings Accounts</relationshipLabel>
        <relationshipName>Savings_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Client_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Client_ID</description>
        <inlineHelpText>Client_ID</inlineHelpText>
        <label>Client ID</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>loan__Client__c.loan__Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>loan__Client__c</referenceTo>
        <relationshipLabel>Savings Account</relationshipLabel>
        <relationshipName>Savings_Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Deposit_Start_Date__c</fullName>
        <description>Deprecated.</description>
        <label>Deposit Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Fee_Set__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Fee Set</description>
        <inlineHelpText>Fee Set</inlineHelpText>
        <label>Fee Set</label>
        <referenceTo>loan__Fee_Set__c</referenceTo>
        <relationshipLabel>Savings Account</relationshipLabel>
        <relationshipName>Savings_Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Fixed_Deposit_Amount__c</fullName>
        <defaultValue>0.0</defaultValue>
        <label>Fixed Deposit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Fixed_Deposit_End_Date__c</fullName>
        <label>Fixed Deposit End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>loan__Group__c.loan__Group_Status__c</field>
                <operation>equals</operation>
                <value>Approved</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>loan__Group__c</referenceTo>
        <relationshipLabel>Savings Accounts</relationshipLabel>
        <relationshipName>Savings_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Interest_to_be_Posted__c</fullName>
        <label>Interest to be Posted</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Last_Deposit_Date__c</fullName>
        <label>Last Deposit Date</label>
        <summarizedField>loan__Savings_Payment_Transaction__c.loan__Transaction_Date__c</summarizedField>
        <summaryForeignKey>loan__Savings_Payment_Transaction__c.loan__Savings_Account__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>loan__Linked_Savings_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Linked Current Account</label>
        <referenceTo>loan__Savings_Account__c</referenceTo>
        <relationshipLabel>Savings Accounts</relationshipLabel>
        <relationshipName>Savings_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Minimum_Balance__c</fullName>
        <label>Minimum Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Next_Calc_Date__c</fullName>
        <label>Next Interest Calc Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Next_Posting_Date__c</fullName>
        <label>Next Interest Posting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__No_of_Txns__c</fullName>
        <label>No of Txns</label>
        <summaryForeignKey>loan__Savings_Payment_Transaction__c.loan__Savings_Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>loan__Recommended_Mandatory_Amnt_for_Deposits__c</fullName>
        <description>Recommended/ Mandatory Amnt for Deposits
Inherited from product definition</description>
        <inlineHelpText>Recommended/Mandatory Amnt for Deposits
Inherited from product definition</inlineHelpText>
        <label>Recommended/Mandatory Amnt for Deposits</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Savings_Account_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>Savings Account External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Savings_Deposit_Count__c</fullName>
        <label>Savings Deposit Count</label>
        <summaryFilterItems>
            <field>loan__Savings_Payment_Transaction__c.loan__Transaction_Type__c</field>
            <operation>equals</operation>
            <value>Deposit</value>
        </summaryFilterItems>
        <summaryForeignKey>loan__Savings_Payment_Transaction__c.loan__Savings_Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>loan__Savings_Product_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Savings Product Name</description>
        <inlineHelpText>Savings Product Name</inlineHelpText>
        <label>Savings Product Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>loan__Savings_Product__c.loan__Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>loan__Savings_Product__c</referenceTo>
        <relationshipLabel>Savings Account</relationshipLabel>
        <relationshipName>Savings_Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Share_Capital_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Share Capital Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partial Application</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Total_Deposit__c</fullName>
        <label>Total Deposit</label>
        <summarizedField>loan__Savings_Payment_Transaction__c.loan__Transaction_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>loan__Savings_Payment_Transaction__c.loan__Cleared__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>loan__Savings_Payment_Transaction__c.loan__Transaction_Type__c</field>
            <operation>equals</operation>
            <value>Deposit</value>
        </summaryFilterItems>
        <summaryForeignKey>loan__Savings_Payment_Transaction__c.loan__Savings_Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>loan__Total_Interest_Earned__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Interest Earned</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Total_Overdue__c</fullName>
        <label>Total Overdue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Total_Withdrawal__c</fullName>
        <label>Total Withdrawal</label>
        <summarizedField>loan__Savings_Payment_Transaction__c.loan__Transaction_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>loan__Savings_Payment_Transaction__c.loan__Cleared__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>loan__Savings_Payment_Transaction__c.loan__Transaction_Type__c</field>
            <operation>equals</operation>
            <value>Withdrawal</value>
        </summaryFilterItems>
        <summaryForeignKey>loan__Savings_Payment_Transaction__c.loan__Savings_Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>loan__Uncleared_Check_Deposit__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Uncleared Check Deposit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Uncleared_Check_Withdrawal__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Uncleared Check Withdrawal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Uncleared_Deposit_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Uncleared Deposit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Uncleared_Withdrawal_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Uncleared Withdrawal Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Savings Account</label>
    <nameField>
        <displayFormat>SAN-{0000000000}</displayFormat>
        <label>Savings Account Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Savings Accounts</pluralLabel>
    <recordTypes>
        <fullName>loan__Fixed</fullName>
        <active>true</active>
        <description>The type of this account is a Fixed Deposit.</description>
        <label>Fixed</label>
    </recordTypes>
    <recordTypes>
        <fullName>loan__Savings</fullName>
        <active>true</active>
        <description>The type of this account is either Savings or Current</description>
        <label>Savings</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>loan__Clients_Status_check</fullName>
        <active>false</active>
        <description>Clients_Status_check</description>
        <errorConditionFormula>NOT(ISPICKVAL( loan__Client_ID__r.loan__Status__c ,&quot;Active&quot;))</errorConditionFormula>
        <errorMessage>Client is not Approved/Active.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>loan__Deposit_Start_Date_check</fullName>
        <active>true</active>
        <description>Deposit_Start_Date_check</description>
        <errorConditionFormula>AND( (loan__Deposit_Start_Date__c &lt;  TODAY()),( PRIORVALUE(loan__Deposit_Start_Date__c)  &lt;&gt; loan__Deposit_Start_Date__c  ))</errorConditionFormula>
        <errorDisplayField>loan__Deposit_Start_Date__c</errorDisplayField>
        <errorMessage>Start Date can&apos;t be in the past.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>loan__Link_Current_Account_to_FD</fullName>
        <active>false</active>
        <errorConditionFormula>NOT(ISNULL(loan__Linked_Savings_Account__c)
||
ISPICKVAL( loan__Savings_Product_Name__r.loan__Product_Type__c ,&apos;Fixed&apos;))</errorConditionFormula>
        <errorMessage>You can only link a current account with a fixed deposit. This account is not a Fixed Deposit. Please check the Savings Product Type.</errorMessage>
    </validationRules>
</CustomObject>